WIP Card layout

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Graphik";
+  font-weight: 400;
+  font-style: normal;
+  font-display: auto;
+  unicode-range: U+000-5FF;
+  src: local("Graphik"), url("/fonts/GraphikRegular.otf") format("otf")''
+}
